# navfitx

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  fitrep.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  zensical.toml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  privileged.yml
.github/workflows/: docs.yml  mkdocs.yml  mypy.yml  ruff.yml  ty.yml
bugs/: index.html
contributing/: index.html
docs/: blocks.md  bugs.md  contributing.md  dev.md  development.md  docs.md  faqs.md  index.html  index.md  signatures.md  summary_groups.md  validation.md  why.md
docs/concepts/: index.md  summary_groups.md  summary_letters.md  validation.md
faqs/: index.html
includes/: abbreviations.md
navfitx/: __main__.py  blocks.py  boxes.py  cli.py  components.py  constants.py  db.py  fitrep.py  fitrep_layout.py  groups.py  gui.py  importer.py  json.py  layout.py  models.py  overlay.py  pdf.py  toml.py  utils.py
navfitx/data/: fitrep.toml
navfitx/gui/: __init__.py  eval.py  fitrep.py  home.py
search/: search_index.json
src/navfitx/: boxes.py  cli.py  constants.py  db.py  fitrep_layout.py  json.py  models.py  overlay.py  toml.py  utils.py
src/navfitx/data/: fitrep.toml
src/navfitx/gui/: __init__.py  chiefeval.py  eval.py  fitrep.py  home.py  report.py
summary_groups/: index.html
tests/: conftest.py  mock_fitrep.toml  test_fitrep_instantiation.py  test_gui.py  test_pdf_creation.py  test_report_validators.py  test_toml_features.py
why/: index.html
