[project]
name = "navfitx"
version = "0.0.3a3"
description = "it's like NAVFIT98 but better"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.4.0",
    "pydantic<2.12", # <2.12 because of this issue: https://github.com/fastapi/sqlmodel/issues/1623
    "pymupdf>=1.26.6",
    "pyodbc>=5.2.0",
    "pyside6>=6.9.3",
    "reportlab>=4.4.4",
    "sqlmodel>=0.0.27",
    "typer>=0.19.2",
]

[project.urls]
Homepage = "https://github.com/tristan-white/navfitx"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "ruff>=0.13.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true

[tool.setuptools.package-data]
"navfitx" = ["data/*.pdf"]

[project.scripts]
navfitx = "navfitx.__main__:main"

